--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-redux-toolkit",
+  "name": "travolic-todo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +9,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.5",
-    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
